
project(leetcode)

add_executable(rm_elem rm_elem)
add_executable(rm_dups rm_dups)
add_executable(rm_dups1 rm_dups1)
add_executable(plus_one plus_one)
add_executable(pascal pascal)
add_executable(pascal2 pascal2)
add_executable(merge_sorted merge_sorted)
add_executable(2sum 2sum)
add_executable(3sum 3sum)
add_executable(3sum_closet 3sum_closet)
add_executable(4sum 4sum)
add_executable(2sum2 2sum2)


add_executable(findMin findMin)
add_executable(findMin2 findMin2)
add_executable(largestRectangleArea largestRectangleArea)
add_executable(marximalRectangle marximalRectangle)
